--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang ="fr">
+<html lang ="en">
 <head>
   <meta charset="utf-8">
-  <title> Découvrez Github</title>
+  <title> Discover Univers Github </title>
   <script src ="script.js"></script>
  </head>
  <body>
